Update Matplotlib Functions and Methods.ipynb

--- a/Matplotlib Functions and Methods.ipynb
+++ b/Matplotlib Functions and Methods.ipynb
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "# boc plot of tips by gender using sns - useful for identifying outliers\n",
+    "# box plot of tips by gender using sns - useful for identifying outliers\n",
     "plt.figure(figsize=(6,4))\n",
     "sns.boxplot(x='gender', y='tip', data=df, palette=['lightpink', 'lightblue'])\n",
     "plt.title('Box Plot of Tips by Gender')\n",
