Update comment for dataset loading in notebook

--- a/CaseStudy.ipynb
+++ b/CaseStudy.ipynb
@@ -13,7 +13,7 @@
     "import datetime\n",
     "import math\n",
     "import numpy as np\n",
-    "df = pd.read_csv('MS_Dhoni_ODI_record.csv')  # loading the tips dataset from seaborn library"
+    "df = pd.read_csv('MS_Dhoni_ODI_record.csv')  # loading the dataset "
    ]
   },
   {
